fixed background image width issue on Safari

--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -67,6 +67,7 @@ p, h1, h2, h3, h4, h5, h6 {
 .background__container {
   position: absolute;
   top: 0;
+  width: 100%;
   z-index: -1;
 }
 
@@ -74,7 +75,7 @@ p, h1, h2, h3, h4, h5, h6 {
   height: 20rem;
   object-fit: cover;
   object-position: bottom;
-  width: 100vw;
+  width: inherit;
 }
 @media screen and (max-width: 991.98px) {
   .background__desktop {
@@ -86,12 +87,11 @@ p, h1, h2, h3, h4, h5, h6 {
   height: clamp(14.5rem, 32.25vw, 20rem);
   object-fit: cover;
   object-position: bottom;
-  width: 100vw;
+  width: inherit;
 }
 @media screen and (min-width: 992px) {
   .background__mobile {
     display: none;
-    opacity: 0;
   }
 }
 
