--- a/scss/_background.scss
+++ b/scss/_background.scss
@@ -1,6 +1,7 @@
 .background__container {
     position: absolute;
     top: 0;
+    width: 100%;
     z-index: -1;
 }
 
@@ -8,7 +9,7 @@
     height: 20rem;
     object-fit: cover;
     object-position: bottom;
-    width: 100vw;
+    width: inherit;
 
     @media screen and (max-width: 991.98px) {
         display: none;
@@ -19,10 +20,9 @@
     height: clamp(14.5rem, 32.25vw, 20rem);
     object-fit: cover;
     object-position: bottom;
-    width: 100vw;
+    width: inherit;
 
     @media screen and (min-width: 992px) {
         display: none;
-        opacity: 0;
     }
 }
